...
        <deployment identifier="macosx"/>
        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22505"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <customObject id="-2" userLabel="File's Owner" customClass="PanelController" customModule="Clocker" customModuleProvider="target">
            <connections>
                <outlet property="backgroundView" destination="6" id="20"/>
                <outlet property="goBackwardsButton" destination="aW8-hr-4Zh" id="EWT-EA-AGP"/>
                <outlet property="goForwardButton" destination="Bmz-Z2-OvH" id="6bR-Ph-Nit"/>
                <outlet property="leftButton" destination="WVY-D9-AAX" id="M2W-xG-chN"/>
                <outlet property="leftField" destination="8Qj-Y9-Okf" id="q3N-ht-jCd"/>
                <outlet property="mainTableView" destination="dFw-ts-8OZ" id="2kY-dd-rDV"/>
                <outlet property="modernContainerView" destination="8W7-rS-Uob" id="qgZ-SS-ayy"/>
                <outlet property="modernSlider" destination="lxA-64-3QU" id="kS5-ub-7gV"/>
                <outlet property="modernSliderLabel" destination="e2d-EI-Dm0" id="eby-rL-B21"/>
                <outlet property="pinButton" destination="YXE-4J-5cn" id="k6V-HK-7XG"/>
                <outlet property="preferencesButton" destination="Ctq-BV-GPN" id="cdL-5h-qmx"/>
                <outlet property="resetModernSliderButton" destination="TK5-db-7bd" id="Mie-WC-5YN"/>
...
                                            <font key="font" metaFont="systemBold" size="12"/>
                                        </buttonCell>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="30" id="fWo-31-i3M"/>
                                            <constraint firstAttribute="height" constant="18" id="v7I-PR-eTK"/>
                                        </constraints>
                                        <accessibility identifier="Pin"/>
                                        <connections>
                                            <action selector="convertToFloatingWindow:" target="-2" id="cuu-WJ-Sd9"/>
                                        </connections>
                                    </button>
                                    <button toolTip="Copy All Times" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Hc7-fH-V7i">
                                        <rect key="frame" x="95" y="10" width="30" height="21"/>
...
                                            <font key="font" metaFont="systemBold" size="12"/>
                                        </buttonCell>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="20" id="Bnf-E1-uaE"/>
                                            <constraint firstAttribute="width" constant="30" id="pke-4M-ob5"/>
                                        </constraints>
                                        <accessibility identifier="Share"/>
                                        <connections>
                                            <action selector="shareAction:" target="-2" id="Wvh-61-gkx"/>
                                        </connections>
                                    </button>
                                    <button toolTip="Add Location" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ctq-BV-GPN">
                                        <rect key="frame" x="10" y="10" width="30" height="19"/>
...
                                            <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                                        </buttonCell>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="30" id="oaD-Rr-qht"/>
                                            <constraint firstAttribute="height" constant="18" id="t4M-6L-Vqi"/>
                                        </constraints>
                                        <accessibility identifier="Preferences"/>
                                        <connections>
                                            <action selector="openPreferences:" target="-2" id="Wwy-xc-psI"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
...
