...
                                                                <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="564-Re-f1d">
                                                                    <font key="font" size="12" name="Avenir-Light"/>
                                                                    <segments>
                                                                        <segment label="Relative" width="60"/>
                                                                        <segment label="Actual" width="60" selected="YES" tag="1"/>
                                                                        <segment label="Date in mmm/dd"/>
                                                                        <segment label="Hide"/>
                                                                    </segments>
                                                                </segmentedCell>
                                                                <connections>
                                                                    <action selector="changeRelativeDayDisplay:" target="1aL-zR-8L4" id="ziY-tK-Wgr"/>
                                                                    <binding destination="Gpv-Gr-MxZ" name="selectedIndex" keyPath="values.relativeDate" id="KQP-ft-dxC"/>
                                                                </connections>
...
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="186" id="GFp-Fx-5i3"/>
                                                    </constraints>
                                                    <segmentedCell key="cell" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="jUA-fY-nhn">
                                                        <font key="font" size="12" name="Avenir-Light"/>
                                                        <segments>
                                                            <segment label="Show" width="71"/>
                                                            <segment label="Hide" width="71" selected="YES" tag="1"/>
                                                        </segments>
                                                    </segmentedCell>
                                                    <accessibility identifier="FutureSlider"/>
                                                    <connections>
                                                        <action selector="showFutureSlider:" target="1aL-zR-8L4" id="c1a-KS-oo3"/>
                                                        <binding destination="Gpv-Gr-MxZ" name="selectedIndex" keyPath="values.displayFutureSlider" id="ha9-nW-Rv2"/>
                                                    </connections>
                                                </segmentedControl>
                                                <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="8Nx-Xq-XDU">
...
